Enumeradores de estrutura básica adicionados
Autenticação via Firebase adicionada

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,19 @@
 CHATGPT_API_KEY=your_chatgpt_api_key_here
 OPEN_AI_API_URL=https://api.openai.com/v1/chat/completions
+GOOGLE_WEB_CLIENT_ID=your_google_web_client_id_here
+
+# ANDROID
+FIREBASE_ANDROID_API_KEY=YOUR_FIREBASE_ANDROID_API_KEY_HERE
+FIREBASE_ANDROID_APP_ID=YOUR_FIREBASE_ANDROID_APP_ID_HERE
+FIREBASE_ANDROID_MESSAGING_SENDER_ID=YOUR_FIREBASE_ANDROID_MESSAGING_SENDER_ID_HERE
+FIREBASE_ANDROID_PROJECT_ID=YOUR_FIREBASE_ANDROID_PROJECT_ID_HERE
+FIREBASE_ANDROID_STORAGE_BUCKET=YOUR_FIREBASE_ANDROID_STORAGE_BUCKET_HERE
+
+# IOS
+FIREBASE_IOS_API_KEY=YOUR_FIREBASE_IOS_API_KEY_HERE
+FIREBASE_IOS_APP_ID=YOUR_FIREBASE_IOS_APP_ID_HERE
+FIREBASE_IOS_MESSAGING_SENDER_ID=YOUR_FIREBASE_IOS_MESSAGING_SENDER_ID_HERE
+FIREBASE_IOS_PROJECT_ID=YOUR_FIREBASE_IOS_PROJECT_ID_HERE
+FIREBASE_IOS_STORAGE_BUCKET=YOUR_FIREBASE_IOS_STORAGE_BUCKET_HERE
+FIREBASE_IOS_CLIENT_ID=YOUR_FIREBASE_IOS_CLIENT_ID_HERE
+FIREBASE_IOS_BUNDLE_ID=YOUR_FIREBASE_IOS_BUNDLE_ID_HERE
