--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  firebase_ui_auth: ^1.13.0
+  google_sign_in: ^6.2.1
+  firebase_ui_oauth_google: ^1.3.0
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
